<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignUpActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:src="@drawable/logo_signup"
        android:layout_width="match_parent"
        android:layout_height="160dp" />

    <TextView
        android:id="@+id/tvCreateYourAccount"
        android:layout_below="@+id/ivLogo"
        android:text="CREATE YOUR ACCOUNT"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="5dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_below="@+id/tvCreateYourAccount"
        android:hint="@string/example_email_com"
        android:autofillHints=""
        android:inputType="textEmailAddress"
        android:background="@drawable/circle_bordered_rectangle"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvEmail"
        android:layout_below="@+id/etEmail"
        android:text="@string/email"
        android:layout_marginHorizontal="15dp"
        android:paddingHorizontal="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_below="@+id/tvEmail"
        android:hint="@string/your_username"
        android:inputType="text"
        android:autofillHints=""
        android:background="@drawable/circle_bordered_rectangle"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvUsername"
        android:layout_below="@+id/etUsername"
        android:text="@string/username"
        android:layout_marginHorizontal="15dp"
        android:paddingHorizontal="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <EditText
        android:id="@+id/etPassword"
        android:layout_below="@+id/tvUsername"
        android:hint="@string/your_password"
        android:autofillHints=""
        android:background="@drawable/circle_bordered_rectangle"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvPassword"
        android:layout_below="@+id/etPassword"
        android:text="@string/password"
        android:layout_marginHorizontal="15dp"
        android:paddingHorizontal="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etPasswordConfirmation"
        android:layout_below="@+id/tvPassword"
        android:hint="@string/confirm_your_password"
        android:autofillHints=""
        android:background="@drawable/circle_bordered_rectangle"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvPasswordConfirmation"
        android:layout_below="@+id/etPasswordConfirmation"
        android:text="@string/password_confirmation"
        android:layout_marginHorizontal="15dp"
        android:paddingHorizontal="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <Button
        android:id="@+id/btnSignUp"
        android:layout_alignParentBottom="true"
        android:text="@string/sign_up"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>