<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/colorBackground"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvChangeYourPassword"
        android:text="Change your password account:"
        android:textSize="20dp"
        android:textColor="@color/Black"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:paddingVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etOldPassword"
        android:layout_below="@+id/tvChangeYourPassword"
        android:hint="@string/your_current_password"
        android:inputType="textPassword"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_below="@+id/etOldPassword"
        android:hint="@string/your_new_password"
        android:inputType="textPassword"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etNewPassConfirm"
        android:layout_below="@+id/etNewPassword"
        android:hint="@string/confirm_your_new_password"
        android:inputType="textPassword"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnChange"
        android:text="@string/change"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>