<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MarkWordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/LightBlue"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@color/dark_gray" />


    <TextView
        android:id="@+id/tv_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/circle_bordered_rectangle"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:paddingBottom="15dp"
        android:text="@string/word"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_word"
        android:layout_marginHorizontal="20dp"
        android:autofillHints=""
        android:background="@drawable/circle_bordered_rectangle"
        android:hint="@string/hashtag"
        android:inputType="text"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_tag"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_select_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/select_from_existed_tags"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <Spinner
            android:id="@+id/spn_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

</RelativeLayout>